--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
     "postcss-nested": "^1.0.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
+    "baconjs": "^0.7.73",
+    "underscore": "^1.8.3",
+    "jquery": "^2.1.4",
+    "bacon.model": "^0.1.12",
+    "bacon.jquery": "^0.4.12",
     "style-loader": "^0.12.3",
     "webpack": "^1.12.1"
   }
