--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "web-snake",
+  "name": "web-snake-react-bacon",
   "version": "0.1.0",
   "description": "This is a simple application that showcases several frontend technologies. It serves as a playground for trying out different approaches to frontend development.",
-  "main": "src/main.jsx",
   "scripts": {
-    "postinstall": "npm run build",
-    "server": "node server.js",
-    "build": "webpack -p --config webpack.production.config.js",
-    "clean": "rm build/app.js"
+    "start": "node server.js",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
@@ -24,25 +21,26 @@
   "author": "Michal Plachta",
   "license": "MIT",
   "devDependencies": {
-    "react-hot-loader": "^1.2.3",
-    "webpack-dev-server": "^1.7.0"
+    "babel-core": "^5.4.7",
+    "babel-eslint": "^3.1.9",
+    "babel-loader": "^5.1.2",
+    "eslint-plugin-react": "^2.3.0",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.9.6",
+    "webpack-dev-server": "^1.8.2",
+    "autoprefixer": "^6.0.2",
+    "style-loader": "^0.12.3",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "css-loader": "^0.18.0",
+    "postcss-loader": "^0.6.0",
+    "postcss-nested": "^1.0.0"
   },
   "dependencies": {
-    "autoprefixer": "^6.0.2",
-    "babel-core": "^5.4.7",
-    "babel-loader": "^5.1.3",
-    "css-loader": "^0.18.0",
-    "express": "^4.12.3",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "postcss-loader": "^0.6.0",
-    "postcss-nested": "^1.0.0",
     "react": "^0.13.3",
     "baconjs": "^0.7.73",
     "underscore": "^1.8.3",
     "jquery": "^2.1.4",
     "bacon.model": "^0.1.12",
-    "bacon.jquery": "^0.4.12",
-    "style-loader": "^0.12.3",
-    "webpack": "^1.12.1"
+    "bacon.jquery": "^0.4.12"
   }
 }
