--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "This is a simple application that showcases several frontend technologies. It serves as a playground for trying out different approaches to frontend development.",
   "scripts": {
-    "start": "node server.js",
+    "server": "node server.js",
     "lint": "eslint src"
   },
   "repository": {
@@ -21,19 +21,19 @@
   "author": "Michal Plachta",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.0.2",
     "babel-core": "^5.4.7",
     "babel-eslint": "^3.1.9",
     "babel-loader": "^5.1.2",
-    "eslint-plugin-react": "^2.3.0",
-    "react-hot-loader": "^1.3.0",
-    "webpack": "^1.9.6",
-    "webpack-dev-server": "^1.8.2",
-    "autoprefixer": "^6.0.2",
-    "style-loader": "^0.12.3",
-    "extract-text-webpack-plugin": "^0.8.2",
     "css-loader": "^0.18.0",
+    "eslint-plugin-react": "^2.3.0",
+    "extract-text-webpack-plugin": "^0.8.2",
     "postcss-loader": "^0.6.0",
-    "postcss-nested": "^1.0.0"
+    "postcss-nested": "^1.0.0",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.9.6",
+    "webpack-dev-server": "^1.8.2"
   },
   "dependencies": {
     "react": "^0.13.3",
