--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "This is a simple application that showcases several frontend technologies. It serves as a playground for trying out different approaches to frontend development.",
   "scripts": {
-    "server": "node server.js",
+    "start": "node server.js",
+    "test": "babel-tape-runner test/*.js | faucet",
     "lint": "eslint src"
   },
   "repository": {
@@ -25,9 +26,12 @@
     "babel-core": "^5.4.7",
     "babel-eslint": "^3.1.9",
     "babel-loader": "^5.1.2",
+    "blue-tape": "^0.1.10",
+    "babel-tape-runner": "^1.2.0",
     "css-loader": "^0.18.0",
     "eslint-plugin-react": "^2.3.0",
     "extract-text-webpack-plugin": "^0.8.2",
+    "faucet": "0.0.1",
     "postcss-loader": "^0.6.0",
     "postcss-nested": "^1.0.0",
     "react-hot-loader": "^1.3.0",
