--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "babel-core": "^5.4.7",
     "babel-eslint": "^3.1.9",
     "babel-loader": "^5.1.2",
-    "blue-tape": "^0.1.10",
     "babel-tape-runner": "^1.2.0",
+    "blue-tape": "^0.1.10",
     "css-loader": "^0.18.0",
     "eslint-plugin-react": "^2.3.0",
     "extract-text-webpack-plugin": "^0.8.2",
@@ -43,6 +43,7 @@
   "dependencies": {
     "react": "^0.13.3",
     "baconjs": "^0.7.73",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "classnames": "^2.1.3"
   }
 }
