--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-snake-react-bacon",
   "version": "0.1.0",
-  "description": "This is a simple application that showcases several frontend technologies. It serves as a playground for trying out different approaches to frontend development.",
+  "description": "A simple application that showcases several frontend technologies. It serves as a playground for trying out different approaches to frontend development.",
   "scripts": {
     "start": "node server.js",
     "test": "babel-tape-runner test/*.js | faucet",
